# dataformatpp

./: CMakeLists.txt  README.md  dataformatpp_config.h.in  tags
example/: CMakeLists.txt  array.cpp  create.cpp  load.cpp  rename.cpp
src/: DataObject.cpp  DataObject.h  JsonObject.cpp  JsonObject.h  dataformats.h  iDataBase.h
